--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-hello-world",
+  "name": "redbus-motora",
   "version": "0.0.0",
   "author": "Willy Augusto Ferreiro",
   "homepage": "https://www.linkedin.com/in/willyaugusto/",
@@ -20,18 +20,18 @@
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
     "@ionic-native/core": "3.6.1",
-    "@ionic-native/geolocation": "^3.6.1",
+    "@ionic-native/geolocation": "3.6.1",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.1.0",
+    "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.3.5",
+    "@ionic/app-scripts": "1.3.6",
     "typescript": "~2.2.1"
   },
   "cordovaPlugins": [
