--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
+    "moment-timezone": "^0.5.13",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.8.5"
@@ -43,5 +44,8 @@
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "description": "RedBusMotora: An Ionic project"
+  "description": "RedBusMotora: An Ionic project",
+  "config": {
+    "ionic_source_map": "source-map"
+  }
 }
